--- a/index_files/style.css
+++ b/index_files/style.css
@@ -191,13 +191,13 @@ progress::-moz-progress-value {
     margin: 0 auto;
     margin-top:20px;
     margin-bottom: 10px;
-    background-image:url('https://avatars0.githubusercontent.com/u/21081491?v=3&s=460');
+    background-image:url('./static/image/myself.jpg');
     background-size: 120%;
     background-position:center;
     border-radius:50%;
     border:5px solid #607d8b;
     width:160px;
-    height:160px;
+    height:200px;
 }
 
 
